frontend/css/style.scss
/* ... */
// Wraps the user's root component
.rio-user-root-scroller {
    overflow: auto;
}

.rio-user-root-scroller > * {
    position: relative !important;
}

// All components
.rio-component {
    position: absolute;
}

// Fundamental Root Component
.rio-fundamental-root-component {
    position: relative !important;

    width: 100vw;
    height: 100vh;
}

// Row, Column & ListView
.rio-linear-child-container > * {
    position: relative !important;
}

.rio-list-view > .rio-linear-child-container > div > * {
    position: relative !important;
}

@keyframes barber-pole {
    from {
        background-position: 0 0;
    }

    to {
        background-position: 3rem 0rem;
    }
}

.rio-undefined-space {
    pointer-events: none;
    flex-grow: 1;

    background-image: linear-gradient(
        -45deg,
        var(--rio-global-warning-bg) 15%,
        transparent 15%,
        transparent 50%,
        var(--rio-global-warning-bg) 50%,
        var(--rio-global-warning-bg) 65%,
        transparent 65%
    );
    background-size: 3rem 3rem;
    animation: barber-pole 1s linear infinite;
}

.rio-row {
    pointer-events: none;
    display: flex;
    align-items: stretch;
}

.rio-row > .rio-linear-child-container {
    display: flex;
    align-items: stretch;
}

.rio-column {
    pointer-events: none;
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

.rio-column > .rio-linear-child-container {
    display: flex;
    flex-direction: column;
    align-items: stretch;
}

// Grid
.rio-grid {
    pointer-events: none;
    display: grid;
}

// Text
.rio-text {
    pointer-events: auto;

    display: flex;
    align-items: center;
    justify-content: stretch;

    color: var(--rio-local-text-color);
}

// Rectangle
.rio-rectangle {
    pointer-events: auto;
    border-style: solid;

    // The transition time is set via JS
    transition-property: background, stroke-color, stroke-width, border-radius,
        shadow-color, shadow-radius, shadow-offset;
    transition-timing-function: ease;

    overflow: hidden;

    /*
    The following attributes are controlled via variables, to allow JavaScript
    to change them, even on pseudo-classes.
    */
    background: var(--rectangle-background);
    border-color: var(--rectangle-stroke-color);
    border-width: var(--rectangle-stroke-width);
    border-radius: var(--rectangle-corner-radius-top-left)
        var(--rectangle-corner-radius-top-right)
        var(--rectangle-corner-radius-bottom-right)
        var(--rectangle-corner-radius-bottom-left);
    box-shadow: var(--rectangle-shadow-offset-x)
        var(--rectangle-shadow-offset-y) var(--rectangle-shadow-radius)
        var(--rectangle-shadow-color);
}

.rio-rectangle-ripple {
    overflow: hidden;

    @include ripple.surface;
    @include ripple.radius-bounded;
    @include ripple.states;
}

.rio-rectangle-hover:hover {
    background: var(--rectangle-background-hover);
    border-color: var(--rectangle-stroke-color-hover);
    border-width: var(--rectangle-stroke-width-hover);
    border-radius: var(--rectangle-corner-radius-top-left-hover)
        var(--rectangle-corner-radius-top-right-hover)
        var(--rectangle-corner-radius-bottom-right-hover)
        var(--rectangle-corner-radius-bottom-left-hover);
    box-shadow: var(--rectangle-shadow-offset-x-hover)
        var(--rectangle-shadow-offset-y-hover)
        var(--rectangle-shadow-radius-hover) var(--rectangle-shadow-color-hover);
}

// Text Input
.rio-text-input {
    cursor: text;
}

// Input Box: This is a style common to multiple input components, such as
// `TextInput` and `Dropdown`.
.rio-input-box {
    pointer-events: auto;

    position: relative;
    min-width: 6rem;

    display: flex;
    flex-direction: row;
    align-items: end;

    background-color: var(--rio-local-plain-bg-variant);

    border-radius: var(--rio-global-corner-radius-small)
        var(--rio-global-corner-radius-small) 0 0;
}

.rio-input-box:not(.rio-disabled-input) {
    // Material Design Ripple
    overflow: hidden;

    @include ripple.surface;
    @include ripple.radius-bounded;
    @include ripple.states;
}

.rio-input-box:focus-within,
.rio-input-box.rio-input-box-focused {
    outline: none;
    background-color: var(--rio-local-plain-bg-active);
}

.rio-input-box > input {
    order: 1;

    flex-grow: 1;

    background-color: transparent;
    color: var(--rio-local-text-color);
    caret-color: var(--rio-local-accent-bg);
    padding: 0.5rem;
    border: none;
    font-size: 1rem;
}

.rio-input-box > input:active {
    background-color: transparent;
}

.rio-input-box > input:focus-visible {
    outline: none;
}

.rio-input-box-hint-text {
    margin-bottom: 0.5rem;

    color: var(--rio-local-text-color);

    opacity: 0;
    transition: all 0.13s linear;
}

.rio-input-box-prefix-text {
    margin-left: 0.5rem;
}

.rio-input-box-suffix-text {
    margin-right: 0.5rem;
}

input:not(:placeholder-shown) ~ .rio-input-box-hint-text,
.rio-input-box:focus-within > .rio-input-box-hint-text,
.rio-input-box-focused > .rio-input-box-hint-text {
    opacity: 0.5;
}

.rio-input-box-label {
    pointer-events: none;

    position: absolute;
    left: 1.5rem;
    top: calc(50% - 0.5rem);
    font-size: 1rem;
    color: var(--rio-local-text-color);
    opacity: 0.5;

    transition: all 0.13s linear;
}

input:not(:placeholder-shown) ~ .rio-input-box-label,
.rio-input-box:focus-within > .rio-input-box-label,
.rio-input-box-focused > .rio-input-box-label {
    opacity: 1;
    top: 0.5rem;
    bottom: unset;
    font-size: 0.8rem;
}

.rio-input-box:focus-within > .rio-input-box-label,
.rio-input-box-focused > .rio-input-box-label {
    color: var(--rio-local-accent-bg);
}

.rio-input-box-plain-bar,
.rio-input-box-color-bar {
    position: absolute;
    bottom: 0;
    height: 0.12rem;
}

.rio-input-box-plain-bar {
    background-color: var(--rio-local-text-color);

    left: 0;
    right: 0;
    opacity: 0.15;
}
/* ... */

